--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
     <title>#thu</title>
-    <meta name="description" content="Community for Tsinghua University" />
+    <meta name="description" content="清华大学社区" />
     <meta name="apple-mobile-web-app-title" content="#thu" />
     <meta name="application-name" content="#thu" />
     <meta name="msapplication-TileColor" content="#ffffff" />
